--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "client",
+  "name": "raj-enterprise-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Raj Enterprise Backend",
   "license": "ISC",
   "author": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "dependencies": {
     "axios": "^1.13.2",
@@ -15,14 +19,13 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.20.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
     "pdfkit": "^0.17.2",
     "razorpay": "^2.9.6",
-    "routes": "^2.1.0",
     "serve-index": "^1.9.1"
   },
   "devDependencies": {
