--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --open",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "install:deps": "npm install --legacy-peer-deps"
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
